CAP331: Fix file formatting using the spotless check and rebase with main